@@ -1,5 +1,6 @@
 
-2016-05-17 Janusz Dobrowolski de_DE and pt_PT installer typos fixed
+2016-05-20 Janusz Dobrowolski Bank Accounts Edition fixes
+2016-05-17 Janusz Dobrowolski de_DE and pt_PT installer translation typos fixed
 
 2016-02-21 15:34:07 +0100 Joe Hunt 
 Release 2.3.25.
